# caseflow-decision-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  RELEASE.md  docker-compose.yml  pyproject.toml  pytest.ini
configs/: datasets.yaml  policy.yaml
docker/: Dockerfile
experiments/: README.md  exp_001_linear_score_sanity.py  exp_002_train_linear_diabetes.py  exp_003_compare_linear_vs_ridge.py  exp_007_ingest_validate_dataset.py  exp_008_train_from_processed_parquet.py
frontend/: index.html  package-lock.json  package.json
scripts/: db_init.py  demo_mortgage_flow.sh  ingest_raw_to_s3.py
tests/: conftest.py  golden_runner.py  test_audit.py  test_auth.py  test_case_isolation.py  test_datasets_contract.py  test_decision.py  test_documents_intake.py  test_docvqa_truth_ingest.py  test_errors.py  test_evidence_chunking.py  test_evidence_routes.py  test_evidence_stats_delete.py  test_evidence_thresholds.py  test_exp_008_helpers.py  test_fannie_pipeline_sql.py  test_freddie_pipeline_sql.py  test_funsd_ocr_v1.py  test_golden_underwrite.py  test_hmda_pipeline_sql.py  test_ingest.py  test_justification_determinism.py  test_justifier_provider_switch.py  test_lending_club_ingest.py  test_logging.py  test_metrics.py  test_metrics_evidence.py  test_models.py  test_mortgage_decision.py  test_ocr_provenance.py  test_openapi_auth.py  test_policy.py  test_predict.py  test_rate_limit.py  test_ready.py  test_request_id.py  test_sanctions_ingest.py  test_settings.py  test_sroie_truth_ingest.py  test_synthdog_truth_ingest.py  (+12 more)
(+86 files in other folders)
